# Flowent

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Cell.cpp  Cell.h  Gas.cpp  Gas.h  Grid.cpp  Grid.h  GridWriter.cpp  GridWriter.h  README.md  Solver.h  algo.cpp  algo.h  cell_face_relation.h  compressible_flow_functions.cpp  main.cpp  setup.cpp  setup.h  typedefinitions.h  util.cpp  util.h
Grid/: Block.cpp  Block.h  Grid.cpp  Grid.h  Grid_setup.cpp  Patch.cpp  Patch.h  cell_face_relation.cpp  cell_face_relation.h
Solving/: Gas.h  InitialGuess.cpp  Solver.cpp  Solver.h
resources/gases/: air.flwntgas
resources/test_cases/: Nash_Rig.patch  gaussian_bump.grid  gaussian_bump.patch  gridout.flwnt  naca-2412.grid  naca-2412.patch  nozzle.grid  nozzle.patch  solnparams.flwntparam  wedge.grid  wedge.patch
src/: Menu.cpp  main.cpp
src/Grid/: Block.cpp  Block.h  CMakeLists.txt  Cell.cpp  Cell.h  Grid.cpp  Grid.h  Grid_setup.cpp  Patch.cpp  Patch.h  cell_face_relation.cpp  cell_face_relation.h
src/Solving/: CMakeLists.txt  Gas.h  InitialGuess.cpp  InitialGuess.h  SolutionParameters.h  Solver.cpp  Solver.h
src/util/: CMakeLists.txt  GridWriter.cpp  GridWriter.h  Menu.cpp  Menu.h  compressible_flow_functions.cpp  compressible_flow_functions.h  setup.cpp  setup.h  typedefinitions.h  util.cpp  util.h
test_cases/: gaussian_bump.grid  gaussian_bump.patch  gaussian_bump.txt  gridout.flwnt  solnparams.flwntparam
